临时调整代码

--- a/timecoco/extension/MainInterface.storyboard
+++ b/timecoco/extension/MainInterface.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="M4Y-Lb-cyx">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Today View Controller-->
@@ -17,23 +16,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hQK-tV-y76">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OTB-bx-IRb">
-                                <rect key="frame" x="228" y="10" width="46" height="30"/>
+                                <rect key="frame" x="137" y="10" width="46" height="30"/>
                                 <state key="normal" title="Button">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="hQK-tV-y76" secondAttribute="bottom" id="0pl-w9-PMQ"/>
-                            <constraint firstItem="hQK-tV-y76" firstAttribute="trailing" secondItem="OTB-bx-IRb" secondAttribute="trailing" constant="46" id="6QP-ul-tRt"/>
-                            <constraint firstItem="hQK-tV-y76" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" constant="-16" id="XsX-CW-3b4"/>
-                            <constraint firstItem="hQK-tV-y76" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" id="ZJV-mc-mkX"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="hQK-tV-y76" secondAttribute="trailing" constant="-16" id="bSe-2B-nWW"/>
+                            <constraint firstAttribute="centerX" secondItem="OTB-bx-IRb" secondAttribute="centerX" id="Qyd-Xs-hVq"/>
                             <constraint firstAttribute="centerY" secondItem="OTB-bx-IRb" secondAttribute="centerY" id="rbA-Ax-hSq"/>
                         </constraints>
                     </view>
